--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,141 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-26 21:31:53 -0400 
+%% Created for Pete Su at 2023-07-27 07:45:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kaloyerou_2019,
+	author = {P N Kaloyerou and A M Ilunga},
+	date-added = {2023-07-27 07:44:32 -0400},
+	date-modified = {2023-07-27 07:45:00 -0400},
+	doi = {10.1088/1402-4896/ab1547},
+	journal = {Phys. Scr.},
+	note = {\href{https://arxiv.org/abs/1811.09488}{arxiv:1811.09488}},
+	number = {10},
+	pages = {105003},
+	publisher = {{IOP} Publishing},
+	title = {Computer model of the two-pinhole interference experiment using two-dimensional Gaussian wave-packets},
+	url = {https://doi.org/10.1088%2F1402-4896%2Fab1547},
+	volume = {94},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1088%2F1402-4896%2Fab1547},
+	bdsk-url-2 = {https://doi.org/10.1088/1402-4896/ab1547}}
+
+@article{Jones_2015,
+	author = {Eric R Jones and Roger A Bach and Herman Batelaan},
+	date-added = {2023-07-27 07:43:25 -0400},
+	date-modified = {2023-07-27 07:43:25 -0400},
+	doi = {10.1088/0143-0807/36/6/065048},
+	journal = {Eur. J. Phys.},
+	number = {6},
+	pages = {065048},
+	publisher = {{IOP} Publishing},
+	title = {Path integrals, matter waves, and the double slit},
+	url = {https://doi.org/10.1088%2F0143-0807%2F36%2F6%2F065048},
+	volume = {36},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0143-0807%2F36%2F6%2F065048},
+	bdsk-url-2 = {https://doi.org/10.1088/0143-0807/36/6/065048}}
+
+@book{Kleinert_2009,
+	author = {Hagen Kleinert},
+	date-added = {2023-07-27 07:39:57 -0400},
+	date-modified = {2023-07-27 07:42:52 -0400},
+	doi = {10.1142/7305},
+	publisher = {{World} {Scientific}},
+	title = {Path Integrals in Quantum Mechanics, Statistics, Polymer Physics, and Financial Markets},
+	url = {https://doi.org/10.1142/7305 },
+	year = 2009,
+	bdsk-url-1 = {https://doi.org/10.1142%2F5057},
+	bdsk-url-2 = {https://doi.org/10.1142/5057}}
+
+@book{Jammer1974,
+	author = {Max Jammer},
+	date-added = {2023-07-27 07:36:50 -0400},
+	date-modified = {2023-07-27 07:37:23 -0400},
+	publisher = {Wiley-Interscience},
+	title = {The Philosophy of Quantum Mechanics},
+	year = {1974}}
+
+@book{Jammer1966,
+	author = {Max Jammer},
+	date-added = {2023-07-27 07:34:10 -0400},
+	date-modified = {2023-07-27 07:34:10 -0400},
+	publisher = {McGraw-Hill},
+	title = {{The Conceptual Development of Quantum Mechanics}},
+	year = {1966}}
+
+@book{Jammer1989,
+	author = {Max Jammer},
+	date-added = {2023-07-27 07:32:44 -0400},
+	date-modified = {2023-07-27 07:36:14 -0400},
+	note = {Second Edition},
+	publisher = {American Institute of Physics},
+	series = {The History of Modern Physics},
+	title = {{The Conceptual Development of Quantum Mechanics}},
+	volume = {12},
+	year = {1989}}
+
+@inproceedings{Jadczyk1999,
+	author = {Jadczyk, A},
+	booktitle = {Infinite Dimensional Geometry, Noncommutative Geometry, Operator Algebras and Fundamental Interactions},
+	date-added = {2023-07-27 07:25:00 -0400},
+	date-modified = {2023-07-27 07:30:49 -0400},
+	note = {\href{https://arxiv.org/abs/hep-th/9406204}{arxiv:hep-th/9406204}},
+	pages = {58},
+	publisher = {World Scientific},
+	title = {{Topics in quantum dynamics}},
+	year = {1999}}
+
+@article{Scarani1998,
+	author = {Scarani, Valerio and Suarez, Antoine},
+	date-added = {2023-07-27 07:20:55 -0400},
+	date-modified = {2023-07-27 07:21:03 -0400},
+	journal = {American Journal of Physics},
+	number = {8},
+	pages = {718--721},
+	publisher = {American Association of Physics Teachers},
+	title = {Introducing quantum mechanics: one-particle interferences},
+	volume = {66},
+	year = {1998}}
+
+@book{Hughes1989,
+	author = {Hughes, Richard Ieuan Garth},
+	date-added = {2023-07-27 07:20:12 -0400},
+	date-modified = {2023-07-27 07:20:18 -0400},
+	publisher = {Harvard university press},
+	title = {The structure and interpretation of quantum mechanics},
+	year = {1989}}
+
+@article{Holstein_1993,
+	author = {Barry R. Holstein},
+	date-added = {2023-07-27 07:16:53 -0400},
+	date-modified = {2023-07-27 07:16:58 -0400},
+	doi = {10.1119/1.17328},
+	journal = {American Journal of Physics},
+	number = {2},
+	pages = {142--147},
+	publisher = {American Association of Physics Teachers ({AAPT})},
+	title = {Anomalies for pedestrians},
+	url = {https://doi.org/10.1119%2F1.17328},
+	volume = {61},
+	year = 1993,
+	bdsk-url-1 = {https://doi.org/10.1119%2F1.17328},
+	bdsk-url-2 = {https://doi.org/10.1119/1.17328}}
+
+@book{Hindmarsh1967,
+	author = {Hindmarsh, William Russell},
+	date-added = {2023-07-27 07:00:18 -0400},
+	date-modified = {2023-07-27 07:16:04 -0400},
+	note = {2013 Reprint. Elsevier},
+	publisher = {Pergamon Press},
+	series = {The Commonwealth and International Library: Selected Readings in Physics},
+	title = {Atomic Spectra},
+	year = {1967}}
 
 @book{Heunen_2019,
 	author = {Chris Heunen and Jamie Vicary},
@@ -5398,10 +5527,10 @@ horizon.},
 	year = {2013},
 	bdsk-url-1 = {https://doi.org/10.1140/epjh/e2013-40004-9}}
 
-@book{hoddeson1997rise,
+@book{Hoddeson1997,
 	author = {Hoddeson, L. and Brown, L. and Dresden, M. and Riordan, M.},
 	date-added = {2019-02-24 01:37:58 +0000},
-	date-modified = {2019-02-24 01:37:58 +0000},
+	date-modified = {2023-07-27 07:16:17 -0400},
 	isbn = {9780521578165},
 	lccn = {96005397},
 	publisher = {Cambridge University Press},
