--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,90 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-27 07:45:00 -0400 
+%% Created for Pete Su at 2023-07-27 14:57:58 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Knight_1997,
+	author = {P L Knight},
+	date-added = {2023-07-27 14:57:12 -0400},
+	date-modified = {2023-07-27 14:57:12 -0400},
+	doi = {10.1088/0031-8949/1997/t70/014},
+	journal = {Phys. Scr.},
+	pages = {94--100},
+	publisher = {{IOP} Publishing},
+	title = {Dynamics of spontaneous emission},
+	url = {https://doi.org/10.1088%2F0031-8949%2F1997%2Ft70%2F014},
+	volume = {T70},
+	year = 1997,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0031-8949%2F1997%2Ft70%2F014},
+	bdsk-url-2 = {https://doi.org/10.1088/0031-8949/1997/t70/014}}
+
+@article{Kiessling_2018,
+	author = {Michael K.-H. Kiessling and A. Shadi Tahvildar-Zadeh},
+	date-added = {2023-07-27 14:55:56 -0400},
+	date-modified = {2023-07-27 14:56:24 -0400},
+	doi = {10.1063/1.5021066},
+	journal = {Journal of Mathematical Physics},
+	note = {\href{https://arxiv.org/abs/1801.00268}{arxiv:1801.00268}},
+	number = {11},
+	publisher = {{AIP} Publishing},
+	title = {On the quantum-mechanics of a single photon},
+	url = {https://doi.org/10.1063%2F1.5021066},
+	volume = {59},
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1063%2F1.5021066},
+	bdsk-url-2 = {https://doi.org/10.1063/1.5021066}}
+
+@article{Kidd_1989,
+	author = {Richard Kidd and James Ardini and Anatol Anton},
+	date-added = {2023-07-27 14:55:07 -0400},
+	date-modified = {2023-07-27 14:55:07 -0400},
+	doi = {10.1119/1.15862},
+	journal = {American Journal of Physics},
+	number = {1},
+	pages = {27--35},
+	publisher = {American Association of Physics Teachers ({AAPT})},
+	title = {Evolution of the modern photon},
+	url = {https://doi.org/10.1119%2F1.15862},
+	volume = {57},
+	year = 1989,
+	bdsk-url-1 = {https://doi.org/10.1119%2F1.15862},
+	bdsk-url-2 = {https://doi.org/10.1119/1.15862}}
+
+@article{Kibble_1979,
+	author = {T. W. B. Kibble},
+	date-added = {2023-07-27 14:54:18 -0400},
+	date-modified = {2023-07-27 14:54:18 -0400},
+	doi = {10.1007/bf01225149},
+	journal = {Commun.Math. Phys.},
+	number = {2},
+	pages = {189--201},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Geometrization of quantum mechanics},
+	url = {https://doi.org/10.1007%2Fbf01225149},
+	volume = {65},
+	year = 1979,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fbf01225149},
+	bdsk-url-2 = {https://doi.org/10.1007/bf01225149}}
+
+@article{Olkhov_2007,
+	author = {O A Olkhov},
+	date-added = {2023-07-27 14:54:03 -0400},
+	date-modified = {2023-07-27 14:54:03 -0400},
+	doi = {10.1088/1742-6596/67/1/012037},
+	journal = {J. Phys.: Conf. Ser.},
+	pages = {012037},
+	publisher = {{IOP} Publishing},
+	title = {Geometrization of quantum mechanics},
+	url = {https://doi.org/10.1088%2F1742-6596%2F67%2F1%2F012037},
+	volume = {67},
+	year = 2007,
+	bdsk-url-1 = {https://doi.org/10.1088%2F1742-6596%2F67%2F1%2F012037},
+	bdsk-url-2 = {https://doi.org/10.1088/1742-6596/67/1/012037}}
 
 @article{Kaloyerou_2019,
 	author = {P N Kaloyerou and A M Ilunga},
@@ -48,7 +126,7 @@
 	doi = {10.1142/7305},
 	publisher = {{World} {Scientific}},
 	title = {Path Integrals in Quantum Mechanics, Statistics, Polymer Physics, and Financial Markets},
-	url = {https://doi.org/10.1142/7305 },
+	url = {https://doi.org/10.1142/7305},
 	year = 2009,
 	bdsk-url-1 = {https://doi.org/10.1142%2F5057},
 	bdsk-url-2 = {https://doi.org/10.1142/5057}}
