--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,73 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-27 14:57:58 -0400 
+%% Created for Pete Su at 2023-07-27 19:35:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Landsman_2020,
+	author = {Klaas Landsman},
+	date-added = {2023-07-27 19:34:14 -0400},
+	date-modified = {2023-07-27 19:35:00 -0400},
+	doi = {10.1007/s10701-020-00318-8},
+	journal = {Found Phys},
+	note = {\href{https://arxiv.org/abs/1908.07068}{arxiv:1908.07068}},
+	number = {2},
+	pages = {61--104},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Randomness? What Randomness?},
+	url = {https://doi.org/10.1007%2Fs10701-020-00318-8},
+	volume = {50},
+	year = 2020,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fs10701-020-00318-8},
+	bdsk-url-2 = {https://doi.org/10.1007/s10701-020-00318-8}}
+
+@misc{Landsman2006,
+	author = {Landsman, NP},
+	date-added = {2023-07-27 19:32:18 -0400},
+	date-modified = {2023-07-27 19:33:44 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://www.math.ru.nl/~landsman/HSQM2006.pdf}{PDF}},
+	title = {Lecture Notes on Hilbert Spaces and Quantum Mechanics},
+	year = {2006}}
+
+@book{Landau1982QED,
+	author = {Berestetskii, Vladimir Borisovich and Lifshitz, Evgenii Mikhailovich and Pitaevskii, Lev Petrovich},
+	date-added = {2023-07-27 18:07:27 -0400},
+	date-modified = {2023-07-27 18:14:25 -0400},
+	publisher = {Butterworth-Heinemann},
+	title = {Quantum Electrodynamics},
+	volume = {4},
+	year = {1982}}
+
+@book{Landau1981,
+	author = {Landau, Lev Davidovich and Lifshitz, Evgenii Mikhailovich},
+	date-added = {2023-07-27 18:01:37 -0400},
+	date-modified = {2023-07-27 18:10:57 -0400},
+	note = {3rd Edition},
+	publisher = {Pergamon Press},
+	title = {Quantum mechanics: non-relativistic theory},
+	volume = {3},
+	year = {1981}}
+
+@article{Kocherginsky_2021,
+	author = {Nikolai M. Kocherginsky},
+	date-added = {2023-07-27 18:00:03 -0400},
+	date-modified = {2023-07-27 18:00:03 -0400},
+	doi = {10.1007/s40509-020-00240-8},
+	journal = {Quantum Stud.: Math. Found.},
+	number = {2},
+	pages = {217--227},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Interpretation of Schr{\"o}dinger equation based on classical mechanics and spin},
+	url = {https://doi.org/10.1007%2Fs40509-020-00240-8},
+	volume = {8},
+	year = 2021,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fs40509-020-00240-8},
+	bdsk-url-2 = {https://doi.org/10.1007/s40509-020-00240-8}}
 
 @article{Knight_1997,
 	author = {P L Knight},
