--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,84 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-29 07:39:31 -0400 
+%% Created for Pete Su at 2023-07-29 08:00:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{Perepelitsa2007,
+	author = {Dennis Perepelitsa},
+	date-added = {2023-07-29 08:00:05 -0400},
+	date-modified = {2023-07-29 08:00:40 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://web.mit.edu/dvp/www/Work/8.06/dvp-8.06-paper.pdf}{PDF}},
+	title = {Path Integrals in Quantum Mechanics},
+	url = {https://api.semanticscholar.org/CorpusID:17239165},
+	year = {2007},
+	bdsk-url-1 = {https://api.semanticscholar.org/CorpusID:17239165}}
+
+@article{Pais1979,
+	author = {Pais, Abraham},
+	date-added = {2023-07-29 07:53:55 -0400},
+	date-modified = {2023-07-29 07:53:56 -0400},
+	journal = {Reviews of modern physics},
+	number = {4},
+	pages = {863},
+	publisher = {APS},
+	title = {Einstein and the quantum theory},
+	volume = {51},
+	year = {1979}}
+
+@article{Ohanian1986,
+	author = {Hans C. Ohanian},
+	date-added = {2023-07-29 07:53:00 -0400},
+	date-modified = {2023-07-29 07:53:01 -0400},
+	doi = {10.1119/1.14580},
+	journal = {American Journal of Physics},
+	number = {6},
+	pages = {500--505},
+	publisher = {American Association of Physics Teachers ({AAPT})},
+	title = {What is spin?},
+	url = {https://doi.org/10.1119%2F1.14580},
+	volume = {54},
+	year = 1986,
+	bdsk-url-1 = {https://doi.org/10.1119%2F1.14580},
+	bdsk-url-2 = {https://doi.org/10.1119/1.14580}}
+
+@article{Norton2011,
+	author = {John D. Norton},
+	date-added = {2023-07-29 07:51:04 -0400},
+	date-modified = {2023-07-29 07:51:46 -0400},
+	doi = {10.1119/1.3531943},
+	journal = {American Journal of Physics},
+	note = {\href{http://d-scholarship.pitt.edu/12544/}{PDF}},
+	number = {2},
+	pages = {182--188},
+	publisher = {American Association of Physics Teachers ({AAPT})},
+	title = {Little boxes: A simple implementation of the Greenberger, Horne, and Zeilinger result for spatial degrees of freedom},
+	url = {https://doi.org/10.1119%2F1.3531943},
+	volume = {79},
+	year = 2011,
+	bdsk-url-1 = {https://doi.org/10.1119%2F1.3531943},
+	bdsk-url-2 = {https://doi.org/10.1119/1.3531943}}
+
+@article{Nelson1964,
+	author = {Edward Nelson},
+	date-added = {2023-07-29 07:49:57 -0400},
+	date-modified = {2023-07-29 07:49:58 -0400},
+	doi = {10.1063/1.1704124},
+	journal = {Journal of Mathematical Physics},
+	number = {3},
+	pages = {332--343},
+	publisher = {{AIP} Publishing},
+	title = {Feynman Integrals and the Schr{\"o}dinger Equation},
+	url = {https://doi.org/10.1063%2F1.1704124},
+	volume = {5},
+	year = 1964,
+	bdsk-url-1 = {https://doi.org/10.1063%2F1.1704124},
+	bdsk-url-2 = {https://doi.org/10.1063/1.1704124}}
 
 @book{Muga2002,
 	date-added = {2023-07-29 07:39:27 -0400},
@@ -2863,10 +2935,10 @@
 	year = {1994},
 	bdsk-url-1 = {http://www.jstor.org/stable/j.ctv10crg18}}
 
-@book{Norsen2017foundations,
+@book{Norsen2017,
 	author = {Norsen, Travis},
 	date-added = {2023-07-15 09:00:28 -0400},
-	date-modified = {2023-07-15 09:01:32 -0400},
+	date-modified = {2023-07-29 07:50:24 -0400},
 	note = {\href{https://doi.org/10.1007/978-3-319-65867-4}{10.1007/978-3-319-65867-4}},
 	publisher = {Springer},
 	title = {{Foundations of Quantum Mechanics}},
