--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-29 08:00:40 -0400 
+%% Created for Pete Su at 2023-07-29 08:50:28 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -4103,9 +4103,9 @@
 	bdsk-url-1 = {https://doi.org/10.1007/978-3-540-35775-9}}
 
 @article{Hsu2011,
-	author = {Hsu, Bailey C. and Berrondo, Manuel and Van Huele, Jean-Fran\ifmmode \mbox{\c{c}}\else \c{c}\fi{}ois S.},
+	author = {Bailey C. Hsu and Manuel Berrondo and Jean-Fran{\c c}ois S. {Van Huele}},
 	date-added = {2019-08-21 07:46:10 -0400},
-	date-modified = {2023-07-15 08:29:38 -0400},
+	date-modified = {2023-07-29 08:34:51 -0400},
 	doi = {10.1103/PhysRevA.83.012109},
 	issue = {1},
 	journal = {Phys. Rev. A},
@@ -4835,25 +4835,10 @@
 	year = {1985},
 	bdsk-url-1 = {https://doi.org/10.1007/978-1-4612-5158-3}}
 
-@article{Glimm:1970a,
-	author = {J. Glimm and A. Jaffe},
-	date-added = {2019-06-13 07:38:19 -0400},
-	date-modified = {2019-06-13 07:38:41 -0400},
-	doi = {10.1090/s0002-9904-1970-12492-2},
-	journal = {Bulletin of the American Mathematical Society},
-	number = {2},
-	pages = {407--411},
-	publisher = {American Mathematical Society ({AMS})},
-	title = {{Rigorous quantum field theory models}},
-	url = {https://doi.org/10.1090/s0002-9904-1970-12492-2},
-	volume = {76},
-	year = {1970},
-	bdsk-url-1 = {https://doi.org/10.1090/s0002-9904-1970-12492-2}}
-
 @article{Glimm:1968,
-	author = {Glimm, James and Jaffe, Arthur},
+	author = {James Glimm and Arthur Jaffe},
 	date-added = {2019-06-13 07:35:01 -0400},
-	date-modified = {2019-06-13 07:35:25 -0400},
+	date-modified = {2023-07-29 08:45:39 -0400},
 	doi = {10.1103/PhysRev.176.1945},
 	issue = {5},
 	journal = {Phys. Rev.},
@@ -4867,41 +4852,10 @@
 	bdsk-url-1 = {https://link.aps.org/doi/10.1103/PhysRev.176.1945},
 	bdsk-url-2 = {https://doi.org/10.1103/PhysRev.176.1945}}
 
-@article{Glimm:1970b,
-	author = {Glimm, James and Jaffe, Arthur},
-	date-added = {2019-06-13 07:29:53 -0400},
-	date-modified = {2019-06-13 07:38:46 -0400},
-	day = {01},
-	doi = {10.1007/BF02392335},
-	issn = {1871-2509},
-	journal = {Acta Mathematica},
-	number = {1},
-	pages = {203--267},
-	title = {{The $\lambda$($\phi$4)2 quantum field theory without cutoffs. III. The physical vacuum}},
-	url = {https://doi.org/10.1007/BF02392335},
-	volume = {125},
-	year = {1970},
-	bdsk-url-1 = {https://doi.org/10.1007/BF02392335}}
-
-@article{Glimm:1972,
-	author = {Glimm,James and Jaffe,Arthur},
-	date-added = {2019-06-13 07:28:27 -0400},
-	date-modified = {2019-06-13 07:29:17 -0400},
-	doi = {10.1063/1.1665879},
-	eprint = {https://doi.org/10.1063/1.1665879},
-	journal = {Journal of Mathematical Physics},
-	number = {10},
-	pages = {1568-1584},
-	title = {{The $\lambda(\varphi^4 )_2$ Quantum Field Theory without Cutoffs. IV. Perturbations of the Hamiltonian}},
-	url = {https://doi.org/10.1063/1.1665879},
-	volume = {13},
-	year = {1972},
-	bdsk-url-1 = {https://doi.org/10.1063/1.1665879}}
-
-@article{Glimm:1970c,
+@article{Glimm:1970a,
 	author = {James Glimm and Arthur Jaffe},
 	date-added = {2019-06-13 07:22:30 -0400},
-	date-modified = {2019-06-13 07:38:51 -0400},
+	date-modified = {2023-07-29 08:40:03 -0400},
 	doi = {10.2307/1970582},
 	journal = {The Annals of Mathematics},
 	number = {2},
@@ -4912,6 +4866,52 @@
 	volume = {91},
 	year = {1970},
 	bdsk-url-1 = {https://doi.org/10.2307/1970582}}
+
+@article{Glimm:1970b,
+	author = {James Glimm and Arthur Jaffe},
+	date-added = {2019-06-13 07:29:53 -0400},
+	date-modified = {2023-07-29 08:45:47 -0400},
+	day = {01},
+	doi = {10.1007/BF02392335},
+	issn = {1871-2509},
+	journal = {Acta Mathematica},
+	number = {1},
+	pages = {203--267},
+	title = {{The $\lambda(\phi^4)_2$ quantum field theory without cutoffs. III. The physical vacuum}},
+	url = {https://doi.org/10.1007/BF02392335},
+	volume = {125},
+	year = {1970},
+	bdsk-url-1 = {https://doi.org/10.1007/BF02392335}}
+
+@article{Glimm:1970c,
+	author = {James Glimm and Arthur Jaffe},
+	date-added = {2019-06-13 07:38:19 -0400},
+	date-modified = {2023-07-29 08:50:28 -0400},
+	doi = {10.1090/s0002-9904-1970-12492-2},
+	journal = {Bulletin of the American Mathematical Society},
+	number = {2},
+	pages = {407--411},
+	publisher = {American Mathematical Society ({AMS})},
+	title = {{Rigorous quantum field theory models}},
+	url = {https://doi.org/10.1090/s0002-9904-1970-12492-2},
+	volume = {76},
+	year = {1970},
+	bdsk-url-1 = {https://doi.org/10.1090/s0002-9904-1970-12492-2}}
+
+@article{Glimm:1972,
+	author = {James Glimm and Arthur Jaffe},
+	date-added = {2019-06-13 07:28:27 -0400},
+	date-modified = {2023-07-29 08:45:59 -0400},
+	doi = {10.1063/1.1665879},
+	eprint = {https://doi.org/10.1063/1.1665879},
+	journal = {Journal of Mathematical Physics},
+	number = {10},
+	pages = {1568-1584},
+	title = {{The $\lambda(\varphi^4 )_2$ Quantum Field Theory without Cutoffs. IV. Perturbations of the Hamiltonian}},
+	url = {https://doi.org/10.1063/1.1665879},
+	volume = {13},
+	year = {1972},
+	bdsk-url-1 = {https://doi.org/10.1063/1.1665879}}
 
 @article{Ellis:2014rma,
 	archiveprefix = {arXiv},
