--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,110 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-29 10:57:48 -0400 
+%% Created for Pete Su at 2023-07-29 11:42:43 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Schwindt_2016,
+	author = {Jan-Markus Schwindt},
+	date-added = {2023-07-29 11:42:27 -0400},
+	date-modified = {2023-07-29 11:42:27 -0400},
+	doi = {10.1007/978-3-319-24526-3},
+	publisher = {Springer International Publishing},
+	title = {Conceptual Basis of Quantum Mechanics},
+	url = {https://doi.org/10.1007%2F978-3-319-24526-3},
+	year = 2016,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-319-24526-3},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-319-24526-3}}
+
+@book{Schwichtenberg2018,
+	author = {Schwichtenberg, Jakob},
+	date-added = {2023-07-29 11:41:42 -0400},
+	date-modified = {2023-07-29 11:41:48 -0400},
+	publisher = {No-Nonsense Books},
+	title = {No-nonsense quantum mechanics: a student-friendly introduction},
+	year = {2020}}
+
+@article{Dombey1999,
+	author = {Dombey, Norman and Calogeracos, Alex},
+	date-added = {2023-07-29 11:39:00 -0400},
+	date-modified = {2023-07-29 11:40:08 -0400},
+	journal = {Physics Reports},
+	number = {1-3},
+	pages = {41--58},
+	publisher = {Elsevier},
+	title = {Seventy years of the Klein paradox},
+	url = {https://doi.org/10.1016%2Fs0370-1573%2899%2900023-x},
+	volume = {315},
+	year = {1999}}
+
+@book{Schwabl2007,
+	author = {Franz Schwabl},
+	date-added = {2023-07-29 11:37:21 -0400},
+	date-modified = {2023-07-29 11:37:28 -0400},
+	doi = {10.1007/978-3-662-04840-5},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Quantum Mechanics},
+	url = {https://doi.org/10.1007%2F978-3-662-04840-5},
+	year = 2007,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-662-04840-5},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-662-04840-5}}
+
+@article{Schrodinger1952a,
+	author = {E. Schr\"{o}dinger},
+	date-added = {2023-07-29 11:29:26 -0400},
+	date-modified = {2023-07-29 11:29:38 -0400},
+	doi = {10.1093/bjps/iii.11.233},
+	journal = {British Journal for the Philosophy of Science},
+	number = {11},
+	pages = {233--242},
+	publisher = {Taylor \& Francis},
+	title = {{Are There Quantum Jumps? Part II}},
+	volume = {3},
+	year = {1952},
+	bdsk-url-1 = {https://doi.org/10.1093/bjps/iii.11.233}}
+
+@article{Schrodinger1952,
+	author = {Schr{\"o}dinger, Erwin},
+	date-added = {2023-07-29 11:28:46 -0400},
+	date-modified = {2023-07-29 11:29:50 -0400},
+	journal = {The British Journal for the Philosophy of science},
+	number = {10},
+	pages = {109--123},
+	publisher = {Oxford University Press},
+	title = {{Are there quantum jumps? Part I}},
+	volume = {3},
+	year = {1952}}
+
+@book{Schrodinger2003,
+	author = {Schr{\"o}dinger, Erwin},
+	date-added = {2023-07-29 11:24:46 -0400},
+	date-modified = {2023-07-29 11:24:52 -0400},
+	publisher = {American Mathematical Soc.},
+	title = {Collected papers on wave mechanics},
+	year = {2003}}
+
+@book{Schrodinger2020,
+	author = {Schr{\"o}dinger, Erwin},
+	city = {Montreal, Quebec},
+	date-added = {2023-07-29 11:22:05 -0400},
+	date-modified = {2023-07-29 11:24:32 -0400},
+	note = {New reprint. Intro by Valia Allori},
+	publisher = {Minkowski Institute Press},
+	title = {Collected papers on wave mechanics},
+	year = {2020}}
+
+@misc{Schwitters2007,
+	author = {Roy Schwitters},
+	date-added = {2023-07-29 11:16:34 -0400},
+	date-modified = {2023-07-29 11:18:38 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://web2.ph.utexas.edu/~schwitte/PHY362L/QMnote.pdf}{PDF}},
+	title = {Scattering and Decays from Fermi's Golden Rule including all the $\hbar$'s and $c$'s},
+	year = {2007}}
 
 @book{Sakurai2011,
 	author = {Sakurai, J and Napolitano, J},
@@ -1929,10 +2027,10 @@
 	volume = {74},
 	year = {1996}}
 
-@book{Shankar2012principles,
+@book{Shankar2012,
 	author = {Shankar, Ramamurti},
 	date-added = {2023-07-21 14:26:26 -0400},
-	date-modified = {2023-07-21 14:27:40 -0400},
+	date-modified = {2023-07-29 11:40:53 -0400},
 	publisher = {Springer Science \& Business Media},
 	title = {Principles of quantum mechanics},
 	year = {2012}}
