--- a/cond-mat-0610433/hanson_rmp07.tex
+++ b/cond-mat-0610433/hanson_rmp07.tex
@@ -1,8 +1,51 @@
 
-\documentclass[rmp,twocolumn,aps]{revtex4}
+\documentclass[12pt,aps,nofootinbib]{revtex4-1}
 %,superscriptaddress
 \usepackage{graphicx}
 \bibliographystyle{apsrmp}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \begin{document}
 \newcommand{\ket}[1]{\mbox{$|\!#1\;\!\rangle$}}
@@ -47,7 +90,7 @@ The University of Tokyo, Hongo, Bunkyo-ku, Tokyo, 113-8656, Japan}
 \affiliation{Kavli Institute of NanoScience, Delft University of
 Technology, PO Box 5046, 2600 GA Delft, The Netherlands}
 
-\date{\today}
+\date{5 Jun 2007}
 
 \begin{abstract}
 The canonical example of a quantum mechanical two-level system is spin. The simplest picture of spin is a magnetic moment pointing up or down. The full quantum properties of spin become apparent in phenomena such as superpositions of spin states, entanglement among spins and quantum measurements. Many of these phenomena have been observed in experiments performed on ensembles of particles with spin. 
@@ -59,6 +102,7 @@ This review describes the physics of spins in quantum dots containing one or two
 \maketitle
 
 \tableofcontents
+\newpage
 
 \section{Introduction}
 \label{Introduction} The spin of an electron remains a somewhat
@@ -69,7 +113,7 @@ advised the young Ralph Kronig not to publish his theory since
 ``it has nothing to do with reality''. More fortunate were Samuel
 Goudsmit and George Uhlenbeck, who were supervised by Ehrenfest:
 ``Publish, you are both young enough to be able to afford a
-stupidity!''~\footnote{See http://www.lorentz.leidenuniv.nl/history/spin/goudsmit.html.}. It requires Dirac's equation to
+stupidity!''\footnote{See http://www.lorentz.leidenuniv.nl/history/spin/goudsmit.html.}. It requires Dirac's equation to
 find that the spin eigenvalues correspond to one-half times
 Planck's constant, $\hbar$, while considering the electron as a
 point particle. The magnetic moment corresponding to spin is
@@ -172,7 +216,7 @@ The study of individual spins is motivated by an interest in
 fundamental physics, but also by possible applications. First of
 all, miniaturized spintronics is developing towards single spins.
 In this context, this field can be denoted as
-single-spintronics~\footnote{Name coined by Stu Wolf, private communication.} in analogy to single-electronics.
+single-spintronics\footnote{Name coined by Stu Wolf, private communication.} in analogy to single-electronics.
 A second area of applications is quantum information science. Here
 the spin states form the qubits. The
 original proposal by Loss and DiVincenzo~\cite{LossDiVincenzo} has
@@ -198,7 +242,7 @@ hardware solution to engineer a long-lived quantum system will be
 discussed at the end of this review.
 Also, we here restrict ourselves exclusively to electron transport
 measurements of quantum dots, leaving out optical spectroscopy of
-quantum dots, which is a very active field in its own~\footnote{see e.g. ~\textcite{greilich06a,AtatureScience2006,KrennerPRL2006,BerezovskyScience2006} and references therein}. Again, much of the physics discussed in this review also applies to optically 
+quantum dots, which is a very active field in its own\footnote{see e.g. ~\textcite{greilich06a,AtatureScience2006,KrennerPRL2006,BerezovskyScience2006} and references therein}. Again, much of the physics discussed in this review also applies to optically 
 measured quantum dots.
 
 Section~\ref{Section:Basics} starts with an introduction on
@@ -467,7 +511,7 @@ on the gate voltage, whereas the energy has a quadratic
 dependence. In fact, the dependence is the same for all $N$ and
 the whole `ladder' of electrochemical potentials can be moved up
 or down while the distance between levels remains
-constant~\footnote{Deviations from this model are sometimes
+constant\footnote{Deviations from this model are sometimes
 observed in systems where the source-drain voltage and gate
 voltage are varied over a very wide range; one notable example
 being single molecules trapped between closely-spaced electrodes,
@@ -653,7 +697,7 @@ the $N$-electron Coulomb blockade region, the transition
 necessarily involves an $N$-electron excited state}. This is true
 for any $N$. As a consequence, no lines terminate at the Coulomb
 blockade region where $N$=0, as there exist no excited state for
-$N$=0~\footnote{Note that energy absorption from the environment
+$N$=0\footnote{Note that energy absorption from the environment
 can lead to exceptions: photon- or phonon-assisted tunneling can
 give rise to lines ending in the $N$=0 Coulomb blockade region.
 However, many experiments are performed at very low temperatures
@@ -1048,7 +1092,7 @@ number. In contrast, the onset of second-order (cotunneling)
 currents is governed by the energy difference between states with
 the \textit{same} number of electrons. Therefore, the triplet
 states change the second-order (cotunneling) currents at three
-values of $V_{SD}$ if the ground state is a singlet~\footnote{If
+values of $V_{SD}$ if the ground state is a singlet\footnote{If
 the ground state is a triplet, the cotunneling current only
 changes at two values of $V_{SD}$ (0 and $\Delta E_Z/|e|$), due to
 the spin selection rules.}~\cite{PaaskeNatPhys2006}.
@@ -2428,7 +2472,7 @@ potential of dot 1 is found to be:
 dot $i$, $C_{S}$ ($C_{D}$) is the capacitance from dot 1 (2) to
 the source (drain), $E_{Ci}$ is the charging energy of the
 individual dot $i$ and $E_{Cm}$ is the electrostatic coupling
-energy~\footnote{Note that in ~\textcite{WielRMP2003} the
+energy\footnote{Note that in ~\textcite{WielRMP2003} the
 cross-capacitance terms ($C_{12}$ and $C_{21}$) are neglected.
 However, they generally are significant in lateral dots.}. The
 coupling energy $E_{Cm}$ is the change in the energy of one dot
@@ -2684,7 +2728,7 @@ dots, for the case of negligibly small tunnel coupling. Since the
 three triplet states are degenerate, we denote them here by
 $T(1,1)$ and $T(0,2)$. The diagrams indicate the electrochemical potentials in left and right dot for three values of $\varepsilon$.
 
-\begin{figure}[htb]
+\begin{figure}[p]
 \includegraphics[width=3.2in, clip=true]{hanson_fig32.eps}
 \caption{(Color in online edition) Energies of the two-electron spin singlet and triplet
 levels in a double dot as a function of detuning $\varepsilon$ between the
@@ -3219,7 +3263,7 @@ dot structure, photon-assisted tunneling processes can be greatly
 suppressed.
 
 \begin{figure}[!htb]
-\includegraphics[width=7.8cm]{hanson_fig43.eps}
+\includegraphics[width=7cm]{hanson_fig43.eps}
 \caption{(Color in online edition) (a) Energy levels of the two-electron spin states in the
 double dot. ESR can drive transitions between the states with
 parallel spins to the states with anti-parallel spins, thereby
