--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-29 18:24:02 -0400 
+%% Created for Pete Su at 2023-07-29 21:37:33 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Breuer1997,
+	author = {Heinz-Peter Breuer and Francesco Petruccione},
+	date-added = {2023-07-29 21:37:24 -0400},
+	date-modified = {2023-07-29 21:37:27 -0400},
+	doi = {10.1002/prop.2190450104},
+	journal = {Fortschr. Phys.},
+	number = {1},
+	pages = {39--78},
+	publisher = {Wiley},
+	title = {Stochastic Dynamics of Reduced Wave Functions and Continuous Measurement in Quantum Optics},
+	url = {https://doi.org/10.1002%2Fprop.2190450104},
+	volume = {45},
+	year = 1997,
+	bdsk-url-1 = {https://doi.org/10.1002%2Fprop.2190450104},
+	bdsk-url-2 = {https://doi.org/10.1002/prop.2190450104}}
 
 @inproceedings{Luminet2003,
 	author = {Luminet, Jean-Pierre},
