--- a/1110.0069/What_is_quantum_Combined.tex
+++ b/1110.0069/What_is_quantum_Combined.tex
@@ -1,4 +1,4 @@
-\documentclass[prl,twocolumn,floatfix,showpacs,superscriptaddress,amsmath,amssymb]{revtex4}
+\documentclass[12pt,prl,floatfix,showpacs,superscriptaddress,amsmath,amssymb]{revtex4}
 %not revtex4-1 because it doesn't do footnotes unless you use a bib file.
 
 %\bibliographystyle{apsrev4-1}%-1.bst
@@ -13,6 +13,48 @@
 \newcommand{\grn}{\color{ngreen}}
 \newcommand{\blk}{\color{black}}
 \newcommand{\hmw}[1]{{\color{ngreen} \bf [[{#1}]]}}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %%%%% User specified LaTeX commands. %%%%%%%%%%%%%%%%%%%%
 
@@ -488,13 +530,13 @@ E.~G. Cavalcanti \ea, Phys. Rev. A \textbf{80}, 032112 (2009).
 
 \bibitem{SJWP10}
 D. J. Saunders \ea, %S. J. Jones, H. M. Wiseman, and G. J. Pryde,	
-	%ÒExperimental EPR-Steering of Bell-local StatesÓ 
+	%ï¿½Experimental EPR-Steering of Bell-local Statesï¿½ 
 	Nature Physics {\bf 6}, 845 (2010).
 	
 \bibitem{Smi12}
 D. H. Smith \ea, %G. Gillett, M. P. de Almeida, C. Branciard, A. Fedrizzi, T. J. Weinhold, A. Lita, B. 
 %Calkins, T. Gerrits, H. M. Wiseman, S. W. Nam, and A. G. White, 
-%	ÒConclusive quantum steering with superconducting transition edge sensorsÓ
+%	ï¿½Conclusive quantum steering with superconducting transition edge sensorsï¿½
 	Nature Comms. {\bf 3}, 625 (2012).
 
 \bibitem{JonWisDoh07}
