--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-29 21:37:33 -0400 
+%% Created for Pete Su at 2023-07-29 21:47:46 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Wiseman2012,
+	author = {Howard M. Wiseman and Jay M. Gambetta},
+	date-added = {2023-07-29 21:47:16 -0400},
+	date-modified = {2023-07-29 21:47:46 -0400},
+	doi = {10.1103/physrevlett.108.220402},
+	journal = {Phys. Rev. Lett.},
+	note = {\href{https://arxiv.org/abs/1110.0069}{arxiv:1110.0069}},
+	number = {22},
+	publisher = {American Physical Society ({APS})},
+	title = {Are Dynamical Quantum Jumps Detector Dependent?},
+	url = {https://doi.org/10.1103%2Fphysrevlett.108.220402},
+	volume = {108},
+	year = 2012,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevlett.108.220402},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevlett.108.220402}}
 
 @article{Breuer1997,
 	author = {Heinz-Peter Breuer and Francesco Petruccione},
