--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-29 21:47:46 -0400 
+%% Created for Pete Su at 2023-07-29 21:52:08 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Wiseman1996,
+	author = {H M Wiseman},
+	date-added = {2023-07-29 21:51:18 -0400},
+	date-modified = {2023-07-29 21:52:08 -0400},
+	doi = {10.1088/1355-5111/8/1/015},
+	journal = {Quantum Semiclass. Opt.},
+	note = {\href{https://arxiv.org/abs/quant-ph/0302080}{arxiv:quant-ph/0302080}},
+	number = {1},
+	pages = {205--222},
+	publisher = {{IOP} Publishing},
+	title = {Quantum trajectories and quantum measurement theory},
+	url = {https://doi.org/10.1088%2F1355-5111%2F8%2F1%2F015},
+	volume = {8},
+	year = 1996,
+	bdsk-url-1 = {https://doi.org/10.1088%2F1355-5111%2F8%2F1%2F015},
+	bdsk-url-2 = {https://doi.org/10.1088/1355-5111/8/1/015}}
 
 @article{Wiseman2012,
 	author = {Howard M. Wiseman and Jay M. Gambetta},
