--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-07-29 22:07:24 -0400 
+%% Created for Pete Su at 2023-07-30 09:34:42 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Benatti2003,
+	date-added = {2023-07-30 09:34:35 -0400},
+	date-modified = {2023-07-30 09:34:41 -0400},
+	doi = {10.1007/3-540-44874-8},
+	editor = {Fabio Benatti and Roberto Floreanini},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Irreversible Quantum Dynamics},
+	url = {https://doi.org/10.1007%2F3-540-44874-8},
+	year = 2003,
+	bdsk-url-1 = {https://doi.org/10.1007%2F3-540-44874-8},
+	bdsk-url-2 = {https://doi.org/10.1007/3-540-44874-8}}
 
 @article{Teich1992,
 	author = {W. G. Teich and G. Mahler},
