--- a/2307.14461/Sections/introduction.tex
+++ b/2307.14461/Sections/introduction.tex
@@ -1,4 +1,4 @@
-\section*{Introduction}\label{sec: introduction}
+\section{Introduction}\label{sec: introduction}
 %
 %
 \emph{Compositionality} is probably the most relevant principle in applied category theory (ACT) research.
